--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Firebase Configuration
+# Firebase Configuration (Client SDK - for frontend)
 # Copy this file to .env and fill in your actual Firebase credentials
 
 VITE_FIREBASE_API_KEY=your_api_key_here
@@ -8,3 +8,13 @@ VITE_FIREBASE_STORAGE_BUCKET=your_project_id.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id
 VITE_FIREBASE_APP_ID=your_app_id
 VITE_FIREBASE_MEASUREMENT_ID=your_measurement_id
+
+# Firebase Admin SDK (for backend scripts)
+# Download your service account JSON from Firebase Console > Project Settings > Service Accounts
+# Then paste the entire JSON content as a single line (minified) below
+FIREBASE_SERVICE_ACCOUNT={"type":"service_account","project_id":"your_project_id","private_key_id":"...","private_key":"...","client_email":"...","client_id":"...","auth_uri":"...","token_uri":"...","auth_provider_x509_cert_url":"...","client_x509_cert_url":"..."}
+
+# BoardGameGeek API Token
+# Register your application at https://boardgamegeek.com/applications
+# Once approved, create a token and paste it below
+BGG_API_TOKEN=your_bgg_bearer_token_here
