--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@ npm-debug.log*
 .firebase/
 firebase-debug.log
 img/MAIN.mp4
+firebase-config-production.js
+firebase-config-production.js
+firebase-config-production.js
