--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,7 @@ FIREBASE_SERVICE_ACCOUNT={"type":"service_account","project_id":"your_project_id
 # Register your application at https://boardgamegeek.com/applications
 # Once approved, create a token and paste it below
 BGG_API_TOKEN=your_bgg_bearer_token_here
+
+# Admin Authorization
+# Comma-separated list of authorized Gmail addresses for admin access
+VITE_ADMIN_EMAILS=admin@example.com,owner@example.com
